Add @FXML tags, change variables to private, other changes